# Employee-Policies-and-Compliance-RAG

./: .gitignore  LICENSE  README.md  main_rag.ipynb  pyproject.toml  requirements.txt
