[project]
name = "ragggg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.4.0",
    "docx>=0.2.4",
    "fastapi>=0.128.0",
    "flask>=3.1.2",
    "huggingface-hub>=0.36.0",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-text-splitters>=1.1.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "notebook==6.1.5",
    "numpy>=2.4.1",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "pypdf>=6.6.0",
    "python-docx>=1.2.0",
    "regex>=2025.11.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "transformers>=4.57.3",
    "wordcloud>=1.9.5",
]
